Added documentation for Production Settings

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -25,6 +25,9 @@
       "Hosting": {
         "Debug": true
       },
+       "WebRouting": {
+                "UmbracoApplicationUrl": "https://localhost:44316"
+            },
       "RuntimeMinification": {
         "UseInMemoryCache": true,
         "CacheBuster": "Timestamp"
