--- a/appsettings.json
+++ b/appsettings.json
@@ -11,11 +11,28 @@
     }
   },
   "Umbraco": {
+
     "CMS": {
-      "Global": {
-        "Id": "f95aa75f-3921-4b5d-96b0-d8ddd1ba3668",
-        "SanitizeTinyMce": true
+
+        "Hosting": {
+            "Debug": false
+        },
+
+         "WebRouting": {
+                "UmbracoApplicationUrl": "https://umb.persteenolsen.com"
+            },
+      
+        "Global": {
+
+          "Id": "f95aa75f-3921-4b5d-96b0-d8ddd1ba3668",
+
+          "SanitizeTinyMce": true,
+
+          "UseHttps": true
+          
+         
       },
+      
       "Content": {
         "AllowEditInvariantFromNonDefault": true,
         "ContentVersionCleanupPolicy": {
@@ -34,4 +51,5 @@
     "umbracoDbDSN": "Data Source=|DataDirectory|/Umbraco.sqlite.db;Cache=Shared;Foreign Keys=True;Pooling=True",
     "umbracoDbDSN_ProviderName": "Microsoft.Data.Sqlite"
   }
+  
 }
