Added Custom Error Pages 404 + 500

--- a/appsettings.json
+++ b/appsettings.json
@@ -34,6 +34,7 @@
       },
       
       "Content": {
+
         "AllowEditInvariantFromNonDefault": true,
         "ContentVersionCleanupPolicy": {
           "EnableCleanup": true
@@ -49,7 +50,7 @@
   },
   "ConnectionStrings": {
     
-    "umbracoDbDSN": "Data Source=|DataDirectory|/Umbraco.sqlite.db;Cache=Private;Foreign Keys=True;Pooling=True",
+    "umbracoDbDSN": "Data Source=|DataDirectory|/Umbraco.sqlite.db;Cache=Shared;Foreign Keys=True;Pooling=True",
     "umbracoDbDSN_ProviderName": "Microsoft.Data.Sqlite"
   }
   
