--- a/web.config
+++ b/web.config
@@ -2,8 +2,8 @@
 <configuration>
   <location path="." inheritInChildApplications="false">
     <system.webServer>
-     
-    <!--18-05-2025: Redirect http to https-->  
+          
+    <!--18-05-2025: Redirect HTTP to HTTPS-->  
     <rewrite>
      <rules>
         <rule name="RedirectToHTTPS" stopProcessing="true">
@@ -12,40 +12,50 @@
           <add input="{HTTPS}" pattern="off" ignoreCase="true" />
         </conditions>
         <action type="Redirect" url="https://{SERVER_NAME}/{R:1}" redirectType="Permanent" />
-     </rule>
-   </rules>
-   </rewrite>
-      
+        </rule>
+      </rules>
+     </rewrite>
+    
            
     <!--18-05-2025: Custom HTTP Errors - Redirect to Umbraco Routes / Pages -->
     <httpErrors errorMode="Custom" existingResponse="Replace">
       <clear/>
+       
+      <!--TESTING-->
+      <!--<error
+        statusCode="404"
+        path="503.html"
+        responseMode="File"/>-->
       
      <error statusCode="404" path="/404/" responseMode="ExecuteURL"/>
-            
+     
       <error
         statusCode="500"
         path="500.html"
         responseMode="File"/>
       
+       <error
+        statusCode="503"
+        path="503.html"
+        responseMode="File"/>
+      
     </httpErrors>
       
-  <handlers>
-     <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
-  </handlers>
-  <aspNetCore processPath=".\PsoUmbraco.exe" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" />
+     <handlers>
+        <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
+    </handlers>
+   
+    <aspNetCore processPath=".\MyProject.exe" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" />
     
-   <httpProtocol>
+     <httpProtocol>
       <customHeaders>
         <remove name="X-Powered-By" />
       </customHeaders>
-   </httpProtocol>
- 
+    </httpProtocol>
     <security>
       <requestFiltering removeServerHeader="true" />
     </security>
-    
+          
     </system.webServer>
-    
   </location>
 </configuration>
