Trying to improve first page load

--- a/web.config
+++ b/web.config
@@ -55,7 +55,21 @@
     <security>
       <requestFiltering removeServerHeader="true" />
     </security>
-          
+   
+    <!--22-05-2025: Trying to spped up the slow initial page load / cold start -->
+    <!--As an alternative to the below code prevent cold start by a cron job every 5 minutes-->
+    <!--22-05-2025: You could try to remove the attribute: skipManagedModules="true" if erros may happen-->
+    <applicationInitialization
+      doAppInitAfterRestart="true"
+      skipManagedModules="true"
+      remapManagedRequestsTo="loading.html">
+      <add initializationPage="/" hostName="umb.persteenolsen.com"/>
+   </applicationInitialization>
+      
+   <!--21-05-2025: Trying to spped up the slow initial page load -->     
+   <!--<applicationInitialization doAppInitAfterRestart="true" >
+   </applicationInitialization>-->
+      
     </system.webServer>
   </location>
 </configuration>
