--- a/web.config
+++ b/web.config
@@ -57,19 +57,12 @@
     </security>
    
     <!--22-05-2025: Trying to spped up the slow initial page load / cold start -->
+    <!--22-05-2025: Note: IIS seems to ignore the setting !-->
     <!--As an alternative to the below code prevent cold start by a cron job every 5 minutes-->
-    <!--22-05-2025: You could try to remove the attribute: skipManagedModules="true" if erros may happen-->
-    <applicationInitialization
-      doAppInitAfterRestart="true"
-      skipManagedModules="true"
-      remapManagedRequestsTo="loading.html">
+   <applicationInitialization doAppInitAfterRestart="true" skipManagedModules="true" remapManagedRequestsTo="loading.html">
       <add initializationPage="/" hostName="umb.persteenolsen.com"/>
    </applicationInitialization>
-      
-   <!--21-05-2025: Trying to spped up the slow initial page load -->     
-   <!--<applicationInitialization doAppInitAfterRestart="true" >
-   </applicationInitialization>-->
-      
+            
     </system.webServer>
   </location>
 </configuration>
