Adjusted the web.config

--- a/web.config
+++ b/web.config
@@ -57,11 +57,11 @@
     </security>
    
     <!--22-05-2025: Trying to spped up the slow initial page load / cold start -->
-    <!--22-05-2025: Note: IIS seems to ignore the setting !-->
+    <!--22-05-2025: Note: IIS seems to ignore the setting -->
     <!--As an alternative to the below code prevent cold start by a cron job every 5 minutes-->
-   <applicationInitialization doAppInitAfterRestart="true" skipManagedModules="true" remapManagedRequestsTo="loading.html">
+    <!--<applicationInitialization doAppInitAfterRestart="true" skipManagedModules="true" remapManagedRequestsTo="loading.html">
       <add initializationPage="/" hostName="umb.persteenolsen.com"/>
-   </applicationInitialization>
+   </applicationInitialization>-->
             
     </system.webServer>
   </location>
