--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -20,6 +20,17 @@
   "Umbraco": {
     "CMS": {
 
+       "ModelsBuilder": {
+
+       "ModelsMode": "SourceCodeManual",
+       "ModelsNamespace": "Umbraco.Cms.Web.Common.PublishedModels",
+       "FlagOutOfDateModels": false,
+       "ModelsDirectory": "~/umbraco/models",
+       "AcceptUnsafeModelsDirectory": false,
+       "DebugLevel": 0,
+       "IncludeVersionNumberInGeneratedModels": true
+       },
+
       "Content": {
         "MacroErrors": "Throw"
       },
