Added cs files / models by Models Builder

--- a/MyProject.csproj
+++ b/MyProject.csproj
@@ -26,4 +26,13 @@
     <RazorCompileOnPublish>false</RazorCompileOnPublish>
   </PropertyGroup>
 
+ <!--Release Build / Production -->
+ <!-- Note: Only remove the .cs files / models by the below ItemGroup for Release Build / Production -->
+ <!-- The files must be compiled when working locally -->
+ <!-- The ItemGroup settings depends of the setting ModelsBuilder in appsettings.Developement -->
+
+ <!--<ItemGroup>
+   <Compile Remove="umbraco/models/**/*.cs" /> 
+ </ItemGroup>-->
+
 </Project>
